. [FIX] EAGLView: always destroy and recreate OpenGL buffers completely (issue #1254) 
. [FIX] MenuItem: removed warning when deleting item
. [FIX] Node: orderOfArrival is @synthezied correctly (issue #1273)
. [FIX] Node & Sprite: Scale before Skew to prevent issues with negatives scales.
. [FIX] ParticleSystem: prevent bursts of particles due to too high emitCounter (issue #1201)
. [FIX] ParticleBatchNode: removeChild error and 'freezing' particles (issue #1316)
. [FIX] ParticleBatchNode: memoryleak (issue #1306)
. [FIX] Sprite: fixed possible setColor and opacity
. [FIX] Sprite: fixed adding premade sprite hierarchy to batchnode (issue #1217)
. [FIX] TileMap: Fixed a problem with multiple layers and multiple tile sets that could cause TMX maps to not load if rotation is used (issue #1302)
. [FIX] TouchDispatcher: correctly handles addition and removal of handlers when being inside a touch handler (issue #1084, #1139)
. [FIX] TouchDispatcher: new implementation fixes multiple issues (issue #1173, #1267)
. [FIX-MAC] LabelTTF: word wrap works on Mac (issue #1074)
. [FIX-MAC] fix for failed to compile on 32-bit mac builds.

version 1.1-beta 11-Oct-2011
. [NEW] Animation: Added file format. AnimationCache can load animations from file
. [NEW] ccConfig: Removed CC_RETINA_DISPLAY_FILENAME_SUFFIX. Use CCFileUtils API instead
. [NEW] ccConfig: Removed CC_RETINA_DISPLAY_SUPPORT. It is always enabled.
. [NEW] FileUtils: Added iPad / RetinaDisplay extension. To use it, call [CCFileUtils setiPadSuffix:@"-ipad"] or setRetinaDisplaySuffix (issue #1211)
. [NEW] FileUtils: Added xxxFileExistAtPath for iPad and RetinaDisplay resources
. [NEW] Node: improved speed when reordering and adding nodes (integration of reorderSprite branch)
. [NEW] Particles: Added ParticleBatchNode (issue #955)
. [NEW] Sprite: improved speed when reordering and adding sprites (integration of reorderSprite branch)
. [NEW] Scheduler: Added support for delay and repeat (issue #630)