@@ -2,4 +2,4 @@
 
 
 Please, see the online document:
-http://www.cocos2d-iphone.org/wiki/doku.php/release_notes:1_1_beta2
+http://www.cocos2d-iphone.org/wiki/doku.php/release_notes:1_1_0
